[package]
name = "loose-cannon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1" }
bevy_atmosphere = "0.5.0"
bevy_editor_pls = "0.2.0"
bevy_prototype_debug_lines = { version = "0.9.0", features = ["3d"] }
bevy_rapier3d = "0.19.0"
image = "0.24.5"
itertools = "0.10.5"
rand = "0.8.5"
winit = "0.27.5"
wgpu = "0.14.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
